--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -8,13 +8,13 @@ steps:
 # Pre-requisite: build the base OS container; 'temp' is referenced in the
 # Dockerfile for subsequent steps but is not pushed. Building this shared base
 # image enables the versioned builders to share base layers.
-- name: 'gcr.io/cloud-builders/docker'
-  args:
-  - 'build'
-  - '--tag=temp'
-  - '--file=./Dockerfile-base'
-  - '.'
-  id: 'base'
+# - name: 'gcr.io/cloud-builders/docker'
+#   args:
+#   - 'build'
+#   - '--tag=temp'
+#   - '--file=./Dockerfile-base'
+#   - '.'
+#   id: 'base'
 
 - name: 'gcr.io/cloud-builders/docker'
   args:
