--- a/docker/cloudbuild.yaml
+++ b/docker/cloudbuild.yaml
@@ -1,9 +1,6 @@
 # In this directory, run the following command to build this builder.
 # $ gcloud builds submit
 
-substitutions:
-  _DOCKER_20: DOCKER_VERSION=5:24.0.0-1~ubuntu-focal
-
 steps:
 # Pre-requisite: build the base OS container; 'temp' is referenced in the
 # Dockerfile for subsequent steps but is not pushed. Building this shared base
@@ -20,21 +17,11 @@ steps:
   args:
   - 'build'
   - '--tag=gcr.io/$PROJECT_ID/docker:latest'
-  - '--tag=gcr.io/$PROJECT_ID/docker:24.0.0-1'
   - '--file=docker/Dockerfile-versioned'
-  - '--build-arg=${_DOCKER_20}'
   - '.'
-  id: '24.0.0-1'
+  id: 'latest'
   wait_for: ['base']
 
-
-- name: 'gcr.io/$PROJECT_ID/docker:24.0.0-1'
-  args:
-  - 'build'
-  - '--file=docker/Dockerfile-versioned'
-  - '--build-arg=${_DOCKER_20}'
-  - '.'
-  wait_for: ['24.0.0-1']
 
 # Tests for future supported versions of docker builder go here.
 
@@ -44,15 +31,14 @@ steps:
 # the image built above.
 - name: 'gcr.io/$PROJECT_ID/docker'
   args: ['inspect', 'gcr.io/$PROJECT_ID/docker']
-  wait_for: ['24.0.0-1']
+  wait_for: ['latest']
 # Execute a container. The "busybox" container is executed within the docker
 # build step to echo "Hello, world!"
 - name: 'gcr.io/$PROJECT_ID/docker'
   args: ['run', 'busybox', 'echo', 'Hello, world!']
-  wait_for: ['24.0.0-1']
+  wait_for: ['latest']
 
 images:
 - 'gcr.io/$PROJECT_ID/docker:latest'
-- 'gcr.io/$PROJECT_ID/docker:24.0.0-1'
 
 timeout: 1200s
